--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <h1>Hai i am Aditya Abdi</h1>
     </main>     
 </section>
+<section>
+    <h2>p goput</h2>
+</section>
    
 <!-- Hero section end -->
 
