--- a/Profile.html
+++ b/Profile.html
@@ -32,7 +32,7 @@
 
 <div class="navbar-extra">
     <a href="#" id="search"><i data-feather="search"></i></a>
-    <!-- <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a> -->
+    <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
 
 </div>
 </nav>
