--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="navbar-extra">
     <a href="#" id="search"><i data-feather="search"></i></a>
-    <!-- <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a> -->
+    <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
 
 </div>
 </nav>
@@ -41,7 +41,7 @@
 <!-- Hero section -->
 <section class="hero" id="home">
     <main class="content">
-        <h1>Hai i am Aditya Abdi</h1>
+        <h1>Hai i am "Aditya Abdi"</h1>
     </main>     
 </section>
 
