--- a/Profile.html
+++ b/Profile.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="navbar-extra">
-    <a href="#" id="search"><i data-feather="search"></i></a>
+    <!-- <a href="#" id="search"><i data-feather="search"></i></a> -->
     <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
 
 </div>
@@ -39,12 +39,24 @@
 <!-- Navbar end -->
 
 <!-- Hero section -->
-<section class="hero" id="home">
+<section class="hero" id="profile">
     <main class="content">
-        <h1>Nyari apa bang?
-            <p>Tombol collage, contact, search belum jadi </p>
-        </h1>
-    </main>     
+        <h2> Aditya Abdi Susanto</h2>
+    </main>
+    <div class="foto">
+        <img src="img/Foto 1.jpg" width ="300">
+        <img src="img/Foto 2.jpg" width="300">
+        <img src="img/Foto 3.jpg" width="300">
+    </div>
+    <p class="caption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+            Ipsa cum commodi tempora reprehenderit voluptate eaque soluta possimus amet vel officiis neque 
+            repellat perspiciatis incidunt eveniet corporis doloribus culpa, totam fugit nulla quibusdam 
+            accusamus laudantium. Quos totam deserunt ullam vero delectus doloremque rerum minus pariatur laborum
+            quae incidunt, accusamus quam. Molestias, numquam obcaecati eaque voluptatibus consequuntur provident 
+            nostrum, vel explicabo exercitationem officiis deserunt. Aliquid porro, hic omnis id cupiditate odit laborum
+            adipisci harum asperiores rem quibusdam. Magnam similique reiciendis nam iste aliquam at possimus! Rem totam 
+            praesentium expedita amet, nobis molestiae.</p>
+    
 </section>
    
 <!-- Hero section end -->
