--- a/Profile.html
+++ b/Profile.html
@@ -41,12 +41,12 @@
 <!-- Hero section -->
 <section class="hero" id="profile">
     <main class="content">
-        <h2> Aditya Abdi Susanto</h2>
+        <h2> RevoU Fundamental Course</h2>
     </main>
     <div class="foto">
-        <img src="img/Foto 1.jpg" width ="300">
-        <img src="img/Foto 2.jpg" width="300">
-        <img src="img/Foto 3.jpg" width="300">
+        <img src="img/revou.png" width ="300">
+        <!-- <img src="img/Foto 2.jpg" width="300"> -->
+        <!-- <img src="img/Foto 3.jpg" width="300"> -->
     </div>
     <p class="caption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Ipsa cum commodi tempora reprehenderit voluptate eaque soluta possimus amet vel officiis neque 
@@ -61,6 +61,48 @@
    
 <!-- Hero section end -->
 
+<!--Collage  -->
+
+<section id="Collage" class="Collage">
+    <h2>University of <span>RevoU</span></h2>
+    <div class="slider">
+        <img src="img/Foto 1.jpg" width = "400" alt="">
+        <img src="img/Foto 2.jpg" width = "400" alt="">
+        <img src="img/Foto 3.jpg" width = "400" alt="">
+    </div>
+
+    <h2> slider eror _-</h2>
+</section>
+<!-- Collage end -->
+
+<!-- contact -->
+
+<section class="Contact" id="Contact">
+    <h2> <span>Kontak</span> kami</h2>
+    <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus a tempore, id dolor sapiente suscipit!</p> -->
+    <form action="">
+        <div class="input-grup">
+            <i data-feather="user"></i>
+            <input type="text" placeholder="nama">
+        </div>
+    <form action="">
+        <div class="input-grup">
+            <i data-feather="mail"></i>
+            <input type="text" placeholder="email">
+        </div>
+        <div class="input-grup">
+            <i data-feather="phone"></i>
+            <input type="text" placeholder="no hp">
+        </div>
+        <div class="input-grup">
+            <i data-feather="type"></i>
+            <input type="text" placeholder="pesan">
+        </div>
+        <button type="submit" class="btn"> kirim pesan</button>
+    </form>
+</section>
+
+<!-- contact end -->
     <!-- Feather Icons -->
     <script>
         feather.replace()
@@ -68,9 +110,6 @@
 
     <!-- My Javascript -->
     <script src="js/script.js"></script>
-
-    
-
     
    </body>
 </html>
