--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <div class="navbar-nav">
     <a href="#index">Home</a>
     <a href="Profile.html">Profile</a>
-    <a href="#Collage">Collage</a>
-    <a href="#Contact">Contact</a>
+    <a href="Profile.html">Collage</a>
+    <a href="Profile.html">Contact</a>
 </div>
 
 <div class="navbar-extra">
@@ -41,7 +41,7 @@
 <!-- Hero section -->
 <section class="hero" id="home">
     <main class="content">
-        <h1>Hai i am "Aditya Abdi"</h1>
+        <h1>Hai i am "RevoU"</h1>
     </main>     
 </section>
 
